# aw-watcher-cam-status

./: README.md  pyproject.toml
aw_watcher_cam_status/: __main__.py  main.py
aw_watcher_cam_status/helper/: cam_checker.py
