[tool.poetry]
name = "aw-watcher-cam-status"
version = "0.0.1"
description = "Webcam Status Watcher for ActivityWatch"
authors = ["Zach Strout <zachstrout@gmail.com>"]
license = "MPL-2.0"
repository = "https://github.com/RTnhN/aw-watcher-cam-status"

[tool.poetry.scripts]
aw-watcher-cam-status = "aw_watcher_cam_status:main"

[tool.poetry.dependencies]
python = "^3.7"
aw-client = "^0.5.7"
psutil = "^7.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
